--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <script src="scripts/script.js"></script>
 </head>
 <body>
+	<div class="link burger-menu">
+		<div></div>
+		<div></div>
+		<div></div>
+	</div>
 	<a id="slider-control--left" class="slider-control">
 		<img src="svg/arrow-chevron.svg">
 		<span>left</span>
