--- a/index.html
+++ b/index.html
@@ -2,26 +2,42 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="author" content="Dan Motzenbecker">
-    <meta name="description" content="HexaFlip - a javascript library that visualizes arrays as cube interfaces.">
-    <title>Clever - TLS</title>
+    <title>Clever-TMS</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="styles/main.css" type="text/css">
     <script src="scripts/script.js"></script>
 </head>
 <body>
+	<a href="#" class="logo">
+		<h2>
+			<span>c</span>
+			<span>l</span>
+			<span>e</span>
+			<span>v</span>
+			<span>e</span>
+			<span>r</span>
+			<span>-</span>
+			<span>t</span>
+			<span>m</span>
+			<span>s</span>
+		</h2>
+		<div>Translation Management Solutions</div>
+	</a>
 	<div class="link burger-menu">
-		<div></div>
-		<div></div>
-		<div></div>
+		<span></span>
+		<span></span>
+		<span></span>
 	</div>
 	<div id="overlay-menu"></div>
+	<div id="top-menu">
+		<a href="#" class="aqua arrow-size" id="button-top"></a>
+	</div>
 	<a id="slider-control--left" class="slider-control">
-		<img src="svg/arrow-chevron.svg">
+		<img class="arrow-size" src="svg/arrow-chevron--aqua.svg">
 		<span>left</span>
 	</a>
 	<a id="slider-control--right" class="slider-control">
-		<img src="svg/arrow-chevron.svg">
+		<img class="arrow-size" src="svg/arrow-chevron--yellow.svg">
 		<span>right</span>
 	</a>
 	<section id="main-slider">
