--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 	</div>
 	<a id="slider-control--left" class="slider-control">
 		<img class="arrow-size" src="svg/arrow-chevron--aqua.svg">
-		<span>left</span>
+		<span></span>
 	</a>
 	<a id="slider-control--right" class="slider-control">
 		<img class="arrow-size" src="svg/arrow-chevron--yellow.svg">
-		<span>right</span>
+		<span></span>
 	</a>
 	<section id="main-slider">
 		<section id="slider">
@@ -52,7 +52,12 @@
 	</section>
 
 	<section id="content">
-		<section id="slide1"></section>
+		<a href="#" id="scrollPage"></a>
+		<section id="slide1">
+			<a href="#">
+				<span>asdasdas</span>
+			</a>
+		</section>
 		<section id="slide2"></section>
 	</section>
 </body>
