--- a/index.html
+++ b/index.html
@@ -49,16 +49,24 @@
 		<div class="shadow"></div>
 
 		<script src="scripts/hexaflip/hexaflip.js"></script>
+		<a href="#" id="scrollPage"></a>
 	</section>
 
 	<section id="content">
-		<a href="#" id="scrollPage"></a>
-		<section id="slide1">
-			<a href="#">
-				<span>asdasdas</span>
-			</a>
+		<section id="name_1">
+			<div></div>
+			<div></div>
+			<div></div>
 		</section>
-		<section id="slide2"></section>
+		<section id="name_2">
+			<div></div>
+			<div></div>
+		</section>
+		<section id="name_3">
+			<div></div>
+			<div></div>
+			<div></div>
+		</section>
 	</section>
 </body>
 </html>
